force-app/main/default/objects/Claim__c.object
<CustomObject>
    <label>Claim</label>
    <pluralLabel>Claims</pluralLabel>

    <nameField>
        <label>Claim Name</label>
        <type>AutoNumber</type>
        <displayFormat>CLM-{000000}</displayFormat>
    </nameField>


    <!-- Claims are sensitive -->
    <sharingModel>Private</sharingModel>

    <!-- Claim_Number__c (unique claim reference / external id) -->
    <fields>
        <fullName>Claim_Number__c</fullName>
        <label>Claim Number</label>
        <type>Text</type>
        <length>50</length>
        <required>true</required>
        <unique>true</unique>
        <externalId>true</externalId>
    </fields>

    <!-- Policy__c (attach claims to policies) -->
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy</label>
        <type>Lookup</type>
        <referenceTo>Policy__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
    </fields>

    <!-- Customer__c (claimant / insured) -->
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <type>Lookup</type>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
    </fields>

    <!-- Employer__c (optional – for group programs / employer-sponsored) -->
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <type>Lookup</type>
        <referenceTo>Employer__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
    </fields>

    <!-- Claim_Status__c -->
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <type>Picklist</type>
        <required>true</required>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Claim_Type__c -->
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Incident / reporting dates -->
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Reported_Date__c</fullName>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>

    <!-- Financials -->
    <fields>
        <fullName>Claim_Amount__c</fullName>
        <label>Claim Amount</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <fields>
        <fullName>Settlement_Amount__c</fullName>
        <label>Settlement Amount</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <fields>
        <fullName>Settled_On__c</fullName>
        <label>Settled On</label>
        <type>DateTime</type>
    </fields>

    <!-- Ownership / workflow -->
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assigned Claims</relationshipLabel>
        <relationshipName>AssignedClaims</relationshipName>
    </fields>

    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Narrative -->
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <!-- Legacy / integration -->
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <type>Text</type>
        <length>40</length>
    </fields>

    <fields>
        <fullName>Source_System_Id__c</fullName>
        <label>Source System Id</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>Is_Legacy__c</fullName>
        <label>Is Legacy</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>

</CustomObject>